# clsx

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
hack/scripts/: format_exported_py_symbols.py
src/clsx/: __init__.py  __version__.py
src/clsx/abc/: __init__.py
src/clsx/abc/class_names/: __init__.py  class_name.py  class_name_character_iterable.py  class_name_character_stream.py  class_name_iterable.py  nested_class_name_character_iterable.py
src/clsx/abc/conditions/: __init__.py  bool_condition.py  callable_condition.py  condition.py
src/clsx/abc/expressions/: __init__.py  callable_expression.py  conditional_expression_tuple.py  dict_expression.py  expression.py  expression_iterable.py  expression_list.py  expression_set.py  expression_tuple.py  hashable_expression.py  unhashable_expression.py  variadic_expression_tuple.py
src/clsx/api/: __init__.py  _clsx.py  _clsx_test.py
src/clsx/contrib/itertools/: __init__.py  _dedup.py  _flatten_str.py
src/clsx/contrib/itertools/abc/: __init__.py  nested_str_iterable.py
src/clsx/contrib/stdlib/: __init__.py  representable_lambda.py
src/clsx/evaluation/: __init__.py  expression_evaluator.py  expression_evaluator_test.py
src/clsx/parsing/: __init__.py  class_name_parser.py
